# CS-2D-Data

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: 20260105_1605_二维下料问题求解难度分析.md  20260107_1903_二维下料问题工程规范.md  二维下料问题求解难度分析_20260105.md
src/: difficulty_estimator.cpp  difficulty_estimator.h  generator.cpp  generator.h  instance.h  main.cpp
